objects/DAZNBetaConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom setting identifies if the country is in the beta phase</description>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBeta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBeta</label>
        <type>Checkbox</type>
    </fields>
    <label>DAZN Beta Configuration</label>
</CustomObject>